--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "3.8.1",
+    "@sentry/node": "^6.16.1",
     "dotenv": "14.2.0",
     "eris": "DonovanDMC/eris#everything",
     "module-alias": "2.2.2",
