Added anime command.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@sentry/node": "^6.16.1",
     "dotenv": "14.2.0",
     "eris": "DonovanDMC/eris#everything",
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "module-alias": "2.2.2",
     "nekobot-api": "2.1.0"
   },
