--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "eris": "DonovanDMC/eris#everything",
     "graphql": "^16.2.0",
     "graphql-request": "^3.7.0",
+    "ioredis": "^4.28.3",
     "module-alias": "2.2.2",
     "nekobot-api": "2.1.0"
   },
   "devDependencies": {
+    "@types/ioredis": "^4.28.7",
     "@types/node": "17.0.8",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "@typescript-eslint/parser": "5.10.0",
