--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   publish:
+    name: 'Publish'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -17,17 +18,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
       - name: Extract metadata
         id: metadata
         uses: docker/metadata-action@v3
         with:
-          images: itsmetommy/hello-github-actions
+          images: spencer0003/syrim
       
       - name: Publish
         uses: docker/build-push-action@v2
         with:
           context: .
-          publish: true
+          push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
