--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,6 +4,13 @@ on:
   push:
     branches:
       - 'master'
+    paths-ignore:
+      - '.github/**'
+      - '!.github/workflows/docker.yml'
+      - '.vscode/**'
+      - '.gitignore'
+      - 'LICENSE'
+      - 'README'
 
 jobs:
   publish:
