--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "prettier --config .prettierrc ./src/**/*.ts --write && eslint . --ext .ts",
     "build": "tsc",
     "docker:start": "prisma migrate deploy; yarn run start",
+    "prepare": "husky install && del .husky/.gitignore",
     "start": "node dist/index"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
     "eslint": "8.8.0",
     "eslint-plugin-jsdoc": "37.7.0",
     "eslint-plugin-sonarjs": "0.11.0",
+    "husky": "7.0.4",
     "prettier": "2.5.1",
     "prisma": "3.8.1",
     "typescript": "4.5.5"
